include/fastslide/c/slide_reader.h

/// @brief Opaque slide reader handle
typedef struct FastSlideSlideReader FastSlideSlideReader;
/// @brief Opaque per-image handle (one navigable pyramid in the file).
/// Defined in fastslide/c/slide_image.h; forward-declared here so the
/// container API can hand them out.
typedef struct FastSlideSlideImage FastSlideSlideImage;
/// @brief Property value types
typedef enum {
  FASTSLIDE_PROPERTY_TYPE_STRING,
  FASTSLIDE_PROPERTY_TYPE_SIZE_T,
  FASTSLIDE_PROPERTY_TYPE_DOUBLE
} FastSlidePropertyType;
/// @brief Target color space for ICC color management
typedef enum {
  FASTSLIDE_COLOR_SPACE_RGB,       ///< Standard RGB
  FASTSLIDE_COLOR_SPACE_LINEAR,    ///< Linear-light RGB
  FASTSLIDE_COLOR_SPACE_SRGB,      ///< sRGB (OpenSlide-compatible)
  FASTSLIDE_COLOR_SPACE_AUTOMATIC  ///< Determine automatically (defaults sRGB)
} FastSlideColorSpace;
/// @brief ICC rendering intent for color management
typedef enum {
  FASTSLIDE_RENDERING_INTENT_PERCEPTUAL,             ///< Perceptual (default)
  FASTSLIDE_RENDERING_INTENT_RELATIVE_COLORIMETRIC,  ///< Relative colorimetric
  FASTSLIDE_RENDERING_INTENT_SATURATION,             ///< Saturation
  FASTSLIDE_RENDERING_INTENT_ABSOLUTE_COLORIMETRIC   ///< Absolute colorimetric
} FastSlideRenderingIntent;
/// @brief Property value union
typedef struct {
  FastSlidePropertyType type;

  union {
    const char* string_value;
    size_t size_t_value;
    double double_value;
  };
} FastSlidePropertyValue;
/// @brief Level information
typedef struct {
  FastSlideImageDimensions dimensions;
  double downsample_factor;
} FastSlideLevelInfo;
/// @brief Slide properties
typedef struct {
  double mpp_x;                    ///< Microns per pixel X
  double mpp_y;                    ///< Microns per pixel Y
  double objective_magnification;  ///< Objective magnification
  char* objective_name;            ///< Objective name (allocated by function)
  char* scanner_model;             ///< Scanner model (allocated by function)
  char*
      scan_date;  ///< Scan date (allocated by function, NULL if not available)
} FastSlideSlideProperties;
/// @brief Color RGB
typedef struct {
  uint8_t r;
  uint8_t g;
  uint8_t b;
} FastSlideColorRGB;
/// @brief Slide bounds (bounding box of non-empty region)
typedef struct {
  int64_t x;       ///< X coordinate (level 0)
  int64_t y;       ///< Y coordinate (level 0)
  int64_t width;   ///< Width of bounding box
  int64_t height;  ///< Height of bounding box
} FastSlideBounds;
/// @brief Channel metadata
typedef struct {
  char* name;               ///< Channel name (allocated by function)
  char* biomarker;          ///< Biomarker name (allocated by function)
  FastSlideColorRGB color;  ///< Color
  uint32_t exposure_time;   ///< Exposure time
  uint32_t signal_units;    ///< Signal units
} FastSlideChannelMetadata;
/// @brief Region specification
typedef struct {
  FastSlideImageCoordinate top_left;
  FastSlideImageDimensions size;
  int level;
  uint32_t z;  ///< Focal-plane index (0 = first plane)
  uint32_t t;  ///< Time-point index (0 = first time point)
} FastSlideRegionSpec;
/// @brief Z (focal) / T (time) stack extent for an image.
///
/// `z_count`/`t_count` are always >= 1. The spacings are optional: the
/// `has_*` flag is 1 when the matching value is known, 0 otherwise.
typedef struct {
  uint32_t z_count;     ///< Number of focal planes (>= 1)
  uint32_t t_count;     ///< Number of time points (>= 1)
  int has_z_spacing;    ///< 1 if z_spacing_um is valid, 0 otherwise
  double z_spacing_um;  ///< Focal-plane spacing in microns
  int has_t_interval;   ///< 1 if t_interval_s is valid, 0 otherwise
  double t_interval_s;  ///< Time-point interval in seconds
} FastSlideStackInfo;
// Basic slide properties

/// @brief Get level count
/// @param reader Slide reader handle
/// @return Number of levels or -1 on failure
FASTSLIDE_API int fastslide_slide_reader_get_level_count(
    const FastSlideSlideReader* reader);
/// @brief Get level information
/// @param reader Slide reader handle
/// @param level Level index
/// @param info Output level information
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_level_info(
    const FastSlideSlideReader* reader, int level, FastSlideLevelInfo* info);
/// @brief Get level dimensions
/// @param reader Slide reader handle
/// @param level Level index
/// @param dimensions Output dimensions
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_level_dimensions(
    const FastSlideSlideReader* reader, int level,
    FastSlideImageDimensions* dimensions);
/// @brief Get base dimensions (level 0)
/// @param reader Slide reader handle
/// @param dimensions Output dimensions
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_base_dimensions(
    const FastSlideSlideReader* reader, FastSlideImageDimensions* dimensions);
/// @brief Get level downsample factor
/// @param reader Slide reader handle
/// @param level Level index
/// @return Downsample factor or -1.0 on failure
FASTSLIDE_API double fastslide_slide_reader_get_level_downsample(
    const FastSlideSlideReader* reader, int level);
/// @brief Get best level for downsample factor
/// @param reader Slide reader handle
/// @param downsample Desired downsample factor
/// @return Best matching level or -1 on failure
FASTSLIDE_API int fastslide_slide_reader_get_best_level_for_downsample(
    const FastSlideSlideReader* reader, double downsample);
// Slide properties

/// @brief Get slide properties
/// @param reader Slide reader handle
/// @param properties Output properties (allocated by function)
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_properties(
    const FastSlideSlideReader* reader, FastSlideSlideProperties* properties);
/// @brief Free slide properties
/// @param properties Properties to free
FASTSLIDE_API void fastslide_slide_reader_free_properties(
    FastSlideSlideProperties* properties);
/// @brief Get slide bounds (bounding box of non-empty region)
/// @param reader Slide reader handle
/// @param bounds Output bounds structure
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_bounds(
    const FastSlideSlideReader* reader, FastSlideBounds* bounds);
/// @brief Get format name
/// @param reader Slide reader handle
/// @return Format name string or NULL on failure
/// (pointer valid until reader is freed)
FASTSLIDE_API const char* fastslide_slide_reader_get_format_name(
    const FastSlideSlideReader* reader);
/// @brief Get image format
/// @param reader Slide reader handle
/// @return Image format (FASTSLIDE_IMAGE_FORMAT_RGB or
/// FASTSLIDE_IMAGE_FORMAT_SPECTRAL)
FASTSLIDE_API FastSlideImageFormat
fastslide_slide_reader_get_image_format(const FastSlideSlideReader* reader);
/// @brief Get pixel data type
/// @param reader Slide reader handle
/// @return Data type (FASTSLIDE_DATA_TYPE_UINT8, FASTSLIDE_DATA_TYPE_UINT16,
/// etc.)
FastSlideDataType fastslide_slide_reader_get_data_type(
    const FastSlideSlideReader* reader);
/// @brief Get tile size
/// @param reader Slide reader handle
/// @param tile_size Output tile size
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_tile_size(
    const FastSlideSlideReader* reader, FastSlideImageDimensions* tile_size);
// Channel metadata

/// @brief Get channel metadata
/// @param reader Slide reader handle
/// @param metadata Output array of channel metadata (allocated by function)
/// @param num_channels Output number of channels
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_channel_metadata(
    const FastSlideSlideReader* reader, FastSlideChannelMetadata** metadata,
    int* num_channels);
/// @brief Free channel metadata array
/// @param metadata Metadata array to free
/// @param num_channels Number of channels
FASTSLIDE_API void fastslide_slide_reader_free_channel_metadata(
    FastSlideChannelMetadata* metadata, int num_channels);
// Region reading

/// @brief Read region from slide
/// @param reader Slide reader handle
/// @param region Region specification
/// @return Image handle or NULL on failure
FASTSLIDE_API FastSlideImage* fastslide_slide_reader_read_region(
    const FastSlideSlideReader* reader, const FastSlideRegionSpec* region);
/// @brief Read region with coordinates
/// @param reader Slide reader handle
/// @param x Top-left X coordinate
/// @param y Top-left Y coordinate
/// @param width Region width
/// @param height Region height
/// @param level Pyramid level
/// @param z Focal-plane index (0 = first plane)
/// @param t Time-point index (0 = first time point)
/// @return Image handle or NULL on failure
FASTSLIDE_API FastSlideImage* fastslide_slide_reader_read_region_coords(
    const FastSlideSlideReader* reader, uint32_t x, uint32_t y, uint32_t width,
    uint32_t height, int level, uint32_t z, uint32_t t);
/// @brief Get Z/T stack extent of the primary image.
/// @param reader Slide reader handle
/// @param info Output stack info
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_stack_info(
    const FastSlideSlideReader* reader, FastSlideStackInfo* info);
// Multi-image container API
//
// A `FastSlideSlideReader` is the file/container; a `FastSlideSlideImage`
// is one navigable pyramid inside it (a "series" / "scene"). Most formats
// expose exactly one image; formats like Olympus VSI expose several (a
// low-resolution navigator plus one main scan per imaged region). The
// reader's own level/region functions target the primary image; use the
// per-image handles (fastslide/c/slide_image.h) to navigate the others.

/// @brief Number of navigable images (pyramids) in this file (always >= 1).
/// @param reader Slide reader handle
/// @return Image count, or -1 on failure
FASTSLIDE_API int fastslide_slide_reader_get_image_count(
    const FastSlideSlideReader* reader);
/// @brief Index of the primary image (the one the reader's own
/// level/region functions target).
/// @param reader Slide reader handle
/// @return Primary image index, or -1 on failure
FASTSLIDE_API int fastslide_slide_reader_get_primary_image_index(
    const FastSlideSlideReader* reader);
/// @brief Get human-readable names for every image, in index order.
/// @param reader Slide reader handle
/// @param names Output array of names (allocated by function)
/// @param num_names Output number of names
/// @return 1 on success, 0 on failure
FASTSLIDE_API int fastslide_slide_reader_get_image_names(
    const FastSlideSlideReader* reader, char*** names, int* num_names);
/// @brief Free an image-name array returned by
/// fastslide_slide_reader_get_image_names.
/// @param names Names array
/// @param num_names Number of names
FASTSLIDE_API void fastslide_slide_reader_free_image_names(char** names,
                                                           int num_names);
/// @brief Get a handle to the i-th navigable image.
/// @param reader Slide reader handle
/// @param index Image index in [0, get_image_count())
/// @return Image handle (free with fastslide_slide_image_free) or NULL.
/// @note The handle borrows the reader; it must not outlive @p reader.
FASTSLIDE_API FastSlideSlideImage* fastslide_slide_reader_get_image(
    const FastSlideSlideReader* reader, int index);