include/fastslide/c/image.h

/// @brief Image format enumeration for C API
typedef enum {
  FASTSLIDE_IMAGE_FORMAT_GRAY = 1,     ///< Single channel grayscale
  FASTSLIDE_IMAGE_FORMAT_RGB = 3,      ///< 3 channels: Red, Green, Blue
  FASTSLIDE_IMAGE_FORMAT_RGBA = 4,     ///< 4 channels: Red, Green, Blue, Alpha
  FASTSLIDE_IMAGE_FORMAT_SPECTRAL = 0  ///< N channels (determined at runtime)
} FastSlideImageFormat;
/// @brief Data type enumeration for pixel values
typedef enum {
  FASTSLIDE_DATA_TYPE_UINT8,    ///< 8-bit unsigned integer
  FASTSLIDE_DATA_TYPE_UINT16,   ///< 16-bit unsigned integer
  FASTSLIDE_DATA_TYPE_INT16,    ///< 16-bit signed integer
  FASTSLIDE_DATA_TYPE_UINT32,   ///< 32-bit unsigned integer
  FASTSLIDE_DATA_TYPE_INT32,    ///< 32-bit signed integer
  FASTSLIDE_DATA_TYPE_FLOAT32,  ///< 32-bit floating point
  FASTSLIDE_DATA_TYPE_FLOAT64   ///< 64-bit floating point
} FastSlideDataType;
/// @brief Planar configuration enumeration
/// @details Describes how pixel data is organized in memory
typedef enum {
  FASTSLIDE_PLANAR_CONFIG_CONTIG = 1,   ///< Interleaved: RGBRGBRGB...
  FASTSLIDE_PLANAR_CONFIG_SEPARATE = 2  ///< Planar: RRR...GGG...BBB...
} FastSlidePlanarConfig;
/// @brief Image dimensions
typedef struct {
  uint32_t width;
  uint32_t height;
} FastSlideImageDimensions;
/// @brief Image coordinate
typedef struct {
  uint32_t x;
  uint32_t y;
} FastSlideImageCoordinate;
/// @brief Image information structure
typedef struct {
  FastSlideImageFormat format;
  FastSlideDataType data_type;
  FastSlidePlanarConfig planar_config;
  uint32_t width;
  uint32_t height;
  uint32_t channels;
  size_t bytes_per_sample;
  size_t data_size;
} FastSlideImageInfo;
/// @brief Opaque image handle
typedef struct FastSlideImage FastSlideImage;